--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "cron": "^1.7.0",
     "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
